--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/x-date-pickers": "^8.19.0",
     "date-fns": "^4.1.0",
     "notistack": "^3.0.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.67.0",
     "react-router-dom": "^7.9.6",
